  introduce the exact same line. See ``bzrlib.annotate._break_annotation_tie``
  Be aware though that this is temporary, private (as indicated by the leading
  '_') and a first step to address the problem. (Vincent Ladeuil, #348459)

* New command ``bzr dpush`` that can push changes to foreign 
  branches (svn, git) without setting custom bzr-specific metadata.
  (Jelmer Vernooij)

Improvements
************

* -Dhpss output now includes the number of VFS calls made to the remote
  server. (Jonathan Lange)

* ``--coverage`` works for code running in threads too.
  (Andrew Bennets, Vincent Ladeuil)

* ``bzr pull`` now has a ``--local`` option to only make changes to the
  local branch, and not the bound master branch.
  (Gary van der Merwe, #194716)

* ``bzr rm *`` is now as fast as ``bzr rm * --keep``. (Johan Walles, #180116)

Bug Fixes
*********

* Adding now works properly when path contains a symbolic link.
  (Geoff Bache, #183831)

* An error is now raised for unknown eol values. (Brian de Alwis, #358199)

* ``bzr merge --weave`` will now generate a conflict if one side deletes a
  line, and the other side modifies the line. (John Arbash Meinel, #328171)

* ``bzr reconfigure --standalone`` no longer raises IncompatibleRepositories.
  (Martin von Gagern, #248932)

* ``bzr send`` works to send emails again using MAPI.
  (Neil Martinsen-Burrell, #346998)

* Check for missing parent inventories in StreamSink.  This prevents
  incomplete stacked branches being created by 1.13 bzr:// and
  bzr+ssh:// clients (which have bug #354036).  Instead, the server now
  causes those clients to send the missing records.  (Andrew Bennetts)

* Correctly handle http servers proposing multiple authentication schemes.
  (Vincent Ladeuil, #366107)

* End-Of-Line content filters are now loaded correctly.
  (Ian Clatworthy, Brian de Alwis, #355280)

* Fix a bug in the pure-python ``GroupCompress`` code when handling copies
  longer than 64KiB. (John Arbash Meinel, #364900)
